remane css file and index mods

--- a/index.html
+++ b/index.html
@@ -1,10 +1,12 @@
 <!DOCTYPE html>
-<html>
-<head>
-  <title>Haukai Restaurant</title>
-  <link rel="stylesheet" type="text/css" href="styles.css">
-  <script src="script.js"></script>
-</head>
+<html lang="en">
+    <head>
+        <title>Haukai Restaurant</title>
+        <meta charset="UTF-8">
+        <meta name="viewport" content="width=device-width, initial-scale=1">
+        <link href="css/styles.css" rel="stylesheet">
+        <script src="script.js"></script>
+    </head>
 <body>
   <header>
     <h1>Haukai Restaurant</h1>
@@ -40,10 +42,10 @@
       <input type="date" id="date" name="date"><br>
       <label for="time">Time:</label><br>
       <input type="time" id="time" name="time"><br>
-      <label for="party-size">Party Size:</label><!html>
+      <label for="party-size">Party Size:</label>
       <input type="number" id="party-size" name="party-size"><br>
       <input type="submit" value="Submit">
-    </form> 
+    </form> <p></p>
   </div>
   <div class="about-page" style="display: none;">
     <h2>About Haukai Restaurant</h2>
@@ -53,15 +55,15 @@
 <div class="hours-page" style="display: none;">
   <h2>Open Hours/Contact</h2>
   <p>Haukai Restaurant is open 7 days a week:</p>
-  <p>Monday-Saturday: 11:00am-9:00pm</p>
+  <p>Wednesday-Sunday: pm-9:00pm</p>
   <p>Sunday: 11:00am-8:00pm</p>
   <p>Contact us:</p>
-  <p>Phone: 555-555-5555</p>
+  <p>Phone: 09-401-4019</p>
   <p>Email: haukairestaurant@gmail.com</p>
-  <p>Address: 123 Main St, Anytown USA</p>
+  <p>Address: 1 Island Street, Kerikeri, Bay of Islands, New Zealand</p>
 </div>
 <footer>
-  <p>Copyright Haukai Restaurant 2020</p>
+  <p>Copyright Haukai Restaurant 2022</p>
 </footer>
 </body>
 </!html>
