--- a/index.html
+++ b/index.html
@@ -1,69 +1,35 @@
 <!DOCTYPE html>
 <html lang="en">
-    <head>
-        <title>Haukai Restaurant</title>
-        <meta charset="UTF-8">
-        <meta name="viewport" content="width=device-width, initial-scale=1">
-        <link href="css/styles.css" rel="stylesheet">
-        <script src="script.js"></script>
-    </head>
+<head>
+  <title>Haukai Restaurant</title>
+  <link rel="stylesheet" href="style.css">
+</head>
 <body>
   <header>
-    <h1>Haukai Restaurant</h1>
+    <h1>Haukai</h1>
+    <nav>
+      <ul>
+        <li><a href="index.html">Home</a></li>
+        <li><a href="menu.html">Menu</a></li>
+        <li><a href="hours.html">Hours</a></li>
+        <li><a href="contact.html">Contact</a></li>
+        <li><a href="reservations.html" class="book-table-btn">Book a Table</a></li>
+      </ul>
+    </nav>
   </header>
-  <nav>
-    <ul>
-        <li><a href="#">Home</a></li>
-        <li><a href="#">Menus</a></li>
-        <li><a href="#">Reservations</a></li>
-        <li><a href="#">About</a></li>
-        <li><a href="#">Contact</a></li>
-    </ul>
-  </nav>
-  <div class="home-page">
-    <div class="bg-image"></div>
-    <div class="text">
-      <h2>Welcome to Haukai Restaurant</h2>
-      <p>We are a small, family-owned restaurant located in the heart of downtown. Our menu features a variety of dishes inspired by traditional Hawaiian cuisine, as well as a selection of classic American dishes. We strive to use only the freshest ingredients and make everything from scratch. We hope you will join us for a delicious meal and an enjoyable dining experience.</p>
-      <button a href="menus-btn">View Menus</button>
-      <button a href="book-table-btn">Book A Table</button>
-    </div>
-  </div>
-  <div class="reservation-page" style="display: none;">
-    <h2>Reservation Form</h2>
-    <form>
-      <label for="name">Name:</label><br>
-      <input type="text" id="name" name="name"><br>
-      <label for="email">Email:</label><br>
-      <input type="email" id="email" name="email"><br>
-      <label for="phone">Phone:</label><br>
-      <input type="phone" id="phone" name="phone"><br>
-      <label for="date">Date:</label><br>
-      <input type="date" id="date" name="date"><br>
-      <label for="time">Time:</label><br>
-      <input type="time" id="time" name="time"><br>
-      <label for="party-size">Party Size:</label>
-      <input type="number" id="party-size" name="party-size"><br>
-      <input type="submit" value="Submit">
-    </form> <p></p>
-  </div>
-  <div class="about-page" style="display: none;">
-    <h2>About Haukai Restaurant</h2>
-    <p>Haukai Restaurant was founded in 2015 by a husband and wife team who wanted to bring a taste of their native Hawaii to their new home. Since opening, we have become a beloved community gathering place, known for our warm atmosphere and delicious food. Our menu features a variety of dishes inspired by traditional Hawaiian cuisine, as well as a selection of classic American dishes. We pride ourselves on using only the freshest ingredients and making everything from scratch. Our team is dedicated to providing excellent customer service and a memorable dining experience for all of our guests.</p>
-
-</div>
-<div class="hours-page" style="display: none;">
-  <h2>Open Hours/Contact</h2>
-  <p>Haukai Restaurant is open 7 days a week:</p>
-  <p>Wednesday-Sunday: pm-9:00pm</p>
-  <p>Sunday: 11:00am-8:00pm</p>
-  <p>Contact us:</p>
-  <p>Phone: 09-401-4019</p>
-  <p>Email: haukairestaurant@gmail.com</p>
-  <p>Address: 1 Island Street, Kerikeri, Bay of Islands, New Zealand</p>
-</div>
-<footer>
-  <p>Copyright Haukai Restaurant 2022</p>
-</footer>
+  <main>
+    <div class="carousel">
+        <img src="image1.jpg" alt="Image 1">
+        <img src="image2.jpg" alt="Image 2">
+        <img src="image3.jpg" alt="Image 3">
+      </div>
+      <div class="carousel-controls">
+        <button class="prev">Prev</button>
+        <button class="next">Next</button>
+      </div>
+  </main>
+  <footer>
+    <p>Copyright 2022 My Restaurant</p>
+  </footer>
 </body>
-</!html>
+</html>
