Filee deletion and mods to html & css

--- a/index.html
+++ b/index.html
@@ -18,8 +18,6 @@
       <div class="container-fluid container-xl d-flex align-items-center justify-content-between">
         <div class="logo me-auto">
           <h1><a href="index.html">Haukai</a></h1>
-          <!-- Uncomment below if you prefer to use an image logo -->
-          <!-- <a href="index.html"><img src="assets/img/logo.png" alt="" class="img-fluid"></a>-->
         </div>
         <nav id="navbar" class="navbar order-last order-lg-0">
           <ul>
@@ -112,7 +110,7 @@
 
    </main>
   <footer>
-    <p>Copyright 2022 My Restaurant</p>
+    <p>Copyright 2022 Haukai Restaurant</p>
   </footer>
 </body>
 </html>
