--- a/index.html
+++ b/index.html
@@ -33,15 +33,31 @@
         </ul>
       </div>
     </nav>
-    <div class="container">
-      <div class="row">
-        <div class="col-12">
-          <img src="restaurant.jpg" alt="Restaurant image" class="img-fluid">
+    <div class="carousel slide" data-ride="carousel" id="bg-carousel">
+    <ol class="carousel-indicators">
+      <li data-target="#bg-carousel" data-slide-to="0" class="active"></li>
+      <li data-target="#bg-carousel" data-slide-to="1"></li>
+      <li data-target="#bg-carousel" data-slide-to="2"></li>
+    </ol>
+    <div class="carousel-inner">
+      <div class="carousel-item active">
+        <img src="C:\Users\Laptop\OneDrive\Desktop\BIT 607 Web Development AS 2\slide-1" class="d-block w-100" alt="Restaurant Image-1">
+        <p>
+        </p>
+      </div>
+        <div class="carousel-item active">
+          <img src="C:\Users\Laptop\OneDrive\Desktop\BIT 607 Web Development AS 2\slide-1" class="d-block w-100" alt="Restaurant Image-2">           </div>
+          <p>
+          </p>
+        </div>
+        <div class="carousel-item active">
+          <img src="..." class="d-block w-100" alt="...">
         </div>
       </div>
-    </div>
     <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js" integrity="sha384-DfXdz2htPH0lsSSs5nCTpuj/zy4C+OGpamoFVy38MVBnE+IbbVYUew+OrCXaRkfj" crossorigin="anonymous"></script>
     <script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.1/dist/umd/popper.min.js" integrity="sha384-9/reFTGAW83EW2RDu2S0VKaIzap3H66lZH81PoYlFhbGU+6BZp6G7niu735Sk7lN" crossorigin="anonymous"></script>
     <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/js/bootstrap.min.js" integrity="sha384-B4gt1jrGC7Jh4AgTPSdUtOBvfO8shuf57BaghqFfPlYxofvL8/KUEfYiJOMMV+rV" crossorigin="anonymous"></script>
-    </body>
+    <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.3/umd/popper.min.js" integrity="sha384-ZMP7rVo3mIykV+2+9J3UJ46jBk0WLaUAdn689aCwoqbBJiSnjAK/l8WvCWPIPm49" crossorigin="anonymous"></script>
+  </body>
     </html>
