New files created, mods to html and css files

--- a/contact.html
+++ b/contact.html
@@ -33,47 +33,16 @@
         </ul>
       </div>
     </nav>
-<div class="menu-page">
-    <h1>Our Menu</h1>
-    <div class="menu-section">
-      <h2>Starters</h2>
-      <ul>
-        <li>
-          <h3>Bruschetta</h3>
-          <p>Toasted bread topped with diced tomatoes, basil, and garlic</p>
-        </li>
-        <li>
-          <h3>Calamari</h3>
-          <p>Fried squid served with marinara sauce</p>
-        </li>
-      </ul>
-    </div>
-    <div class="menu-section">
-      <h2>Mains</h2>
-      <ul>
-        <li>
-          <h3>Spaghetti Bolognese</h3>
-          <p>Spaghetti pasta with a meat-based tomato sauce</p>
-        </li>
-        <li>
-          <h3>Grilled Salmon</h3>
-          <p>Salmon fillet grilled with lemon and herbs</p>
-        </li>
-      </ul>
-    </div>
-    <div class="menu-section">
-      <h2>Desserts</h2>
-      <ul>
-        <li>
-          <h3>Tiramisu</h3>
-          <p>An Italian dessert made with ladyfingers, mascarpone cheese, and espresso</p>
-        </li>
-        <li>
-          <h3>Chocolate Cake</h3>
-          <p>A classic chocolate cake with chocolate frosting</p>
-        </li>
-      </ul>
-    </div>
-  </div>
-</body>
+    <div class="contact-page">
+        <h1>Contact Us</h1>
+        <div class="contact-info">
+          <p>Address: 123 Main St, Anytown USA</p>
+          <p>Phone: 555-555-5555</p>
+          <p>Email: info@restaurant.com</p>
+        </div>
+        <div class="map-container">
+            <iframe src="AIzaSyBkclhIGpzlpxefPyJY2_d1cJz_yZwDcO4" title="Google Maps"></iframe>
+        </div>
+      </div>
+  </body>
 </html>
