--- a/hours.html
+++ b/hours.html
@@ -7,8 +7,8 @@
         <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css" integrity="sha384-JcKb8q3iqJ61gNV9KGb8thSsNjpSL0n8PARn9HuZOnIxN0hoP+VmmDGMN5t9UJ0Z" crossorigin="anonymous">
         <link rel="stylesheet" href="styles.css">
       </head>
-  <body>
-    <nav class="navbar navbar-expand-lg navbar-light bg-light">
+      <body>
+      <nav class="navbar navbar-expand-lg navbar-light bg-light">
       <a class="navbar-brand" href="#">Haukai</a>
       <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
         <span class="navbar-toggler-icon"></span>
@@ -33,47 +33,27 @@
         </ul>
       </div>
     </nav>
-<div class="menu-page">
-    <h1>Our Menu</h1>
-    <div class="menu-section">
-      <h2>Starters</h2>
-      <ul>
-        <li>
-          <h3>Bruschetta</h3>
-          <p>Toasted bread topped with diced tomatoes, basil, and garlic</p>
-        </li>
-        <li>
-          <h3>Calamari</h3>
-          <p>Fried squid served with marinara sauce</p>
-        </li>
-      </ul>
-    </div>
-    <div class="menu-section">
-      <h2>Mains</h2>
-      <ul>
-        <li>
-          <h3>Spaghetti Bolognese</h3>
-          <p>Spaghetti pasta with a meat-based tomato sauce</p>
-        </li>
-        <li>
-          <h3>Grilled Salmon</h3>
-          <p>Salmon fillet grilled with lemon and herbs</p>
-        </li>
-      </ul>
-    </div>
-    <div class="menu-section">
-      <h2>Desserts</h2>
-      <ul>
-        <li>
-          <h3>Tiramisu</h3>
-          <p>An Italian dessert made with ladyfingers, mascarpone cheese, and espresso</p>
-        </li>
-        <li>
-          <h3>Chocolate Cake</h3>
-          <p>A classic chocolate cake with chocolate frosting</p>
-        </li>
-      </ul>
-    </div>
-  </div>
-</body>
+    <div class="hours-page">
+        <h1>Our Hours</h1>
+        <p>*Note: Hours may vary on holidays</p>
+        <ul>
+          <li>Wednesday: 8:00 AM - 9:00 PM</li>
+          <li>Thursday: 8:00 AM - 9:00 PM</li>
+          <li>Friday: 8:00 AM - 10:00 PM</li>
+          <li>Saturday: 9:00 AM - 10:00 PM</li>
+          <li>Sunday: 9:00 AM - 9:00 PM</li>
+        </ul>
+        <p>*Note: Hours may vary on holidays</p>
+      </div>
+      <script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
+      <script>
+        $(document).ready(function(){
+          $('.hours-page li').hover(function(){
+            $(this).css('background-color', '#f2f2f2');
+          }, function(){
+            $(this).css('background-color', '#fff');
+          });
+        });
+      </script>
+    </body>
 </html>
