Mod adjustments on all text files

--- a/hours.html
+++ b/hours.html
@@ -5,6 +5,7 @@
         <meta name="viewport" content="width=device-width, initial-scale=1">
         <title>Haukai Restaurant</title>
         <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css" integrity="sha384-JcKb8q3iqJ61gNV9KGb8thSsNjpSL0n8PARn9HuZOnIxN0hoP+VmmDGMN5t9UJ0Z" crossorigin="anonymous">
+        <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@400;700&display=swap" rel="stylesheet">
         <link rel="stylesheet" href="styles.css">
       </head>
       <body>
@@ -35,13 +36,13 @@
     </nav>
     <div class="hours-page">
         <h1>Our Hours</h1>
-        <p>*Note: Hours may vary on holidays</p>
+        <p>Please feel free to book a reservation with us. It will be our pleasure to serve you.</p>
         <ul>
-          <li>Wednesday: 8:00 AM - 9:00 PM</li>
-          <li>Thursday: 8:00 AM - 9:00 PM</li>
-          <li>Friday: 8:00 AM - 10:00 PM</li>
-          <li>Saturday: 9:00 AM - 10:00 PM</li>
-          <li>Sunday: 9:00 AM - 9:00 PM</li>
+          <li>Wednesday: 4:00 PM - 9:00 PM</li>
+          <li>Thursday: 4:00 PM - 9:00 PM</li>
+          <li>Friday: 4:00 PM - 10:00 PM</li>
+          <li>Saturday: 4:00 PM - 10:00 PM</li>
+          <li>Sunday: 4:00 PM - 9:00 PM</li>
         </ul>
         <p>*Note: Hours may vary on holidays</p>
       </div>
