--- a/menu.html
+++ b/menu.html
@@ -36,16 +36,28 @@
 <div class="menu-page">
     <h1>Our Menu</h1>
     <div class="menu-section">
-      <h2>Starters</h2>
+      <h2>Appitizers</h2>
       <ul>
         <li>
-          <h3>Bruschetta</h3>
-          <p>Toasted bread topped with diced tomatoes, basil, and garlic</p>
+          <h3>Rewena Bread - $10</h3>
+          <p>Traditional Maori bread</p>
         </li>
         <li>
-          <h3>Calamari</h3>
-          <p>Fried squid served with marinara sauce</p>
+          <h3>Paua Friiter - $16</h3>
+          <p>Finely diced pieces of paua, served with a side salad and horopito dressing</p>
         </li>
+        <li>
+            <h3>Raw Fish - $20</h3>
+            <p>Dried snapper fish marinated in coconut cream, served with tomatoes and spring onions. </p>
+          </li>
+          <li>
+            <h3>Poached Salmon - $22</h3>
+            <p>Salmon poached in an orange and pistachio glaze, served with rewena bread.</p>
+          </li>
+          <li>
+            <h3>Sea Basket - $25</h3>
+            <p>Crumbed mussels, salt and pepper squid, crumbed hoki bites and garlic prawns.</p>
+          </li>
       </ul>
     </div>
     <div class="menu-section">
