--- a/Reservations.html
+++ b/Reservations.html
@@ -5,9 +5,25 @@
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <title>Haukai Restaurant</title>
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css" integrity="sha384-JcKb8q3iqJ61gNV9KGb8thSsNjpSL0n8PARn9HuZOnIxN0hoP+VmmDGMN5t9UJ0Z" crossorigin="anonymous">
+    <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@400;700&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="styles.css">
   </head>
   <body>
+    <header id="header">
+      <div id="topbar" class="d-flex align-items-center fixed-top">
+        <div class="container d-flex justify-content-center fixed-top">
+          <div class="contact-info d-flex align-items-center">
+            <i class="bi bi-phone d-flex align-items-center">
+              ::before
+              <span>+04 401 4019</span>
+            </i>
+            <i class="bi bi-clock d-flex align-items-center">
+              ::before
+              <span>Wed-Sun: 4pm - 9pm</span>
+            </i>
+          </div>
+        </div>
+      </div>
     <nav class="navbar navbar-expand-lg navbar-light bg-light">
       <a class="navbar-brand" href="#">Haukai</a>
       <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
@@ -33,6 +49,7 @@
         </ul>
       </div>
     </nav>
+  </header>
     <div class="container">
       <div class="row">
         <div class="col-12">
