--- a/contact.html
+++ b/contact.html
@@ -5,6 +5,7 @@
         <meta name="viewport" content="width=device-width, initial-scale=1">
         <title>Haukai Restaurant</title>
         <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css" integrity="sha384-JcKb8q3iqJ61gNV9KGb8thSsNjpSL0n8PARn9HuZOnIxN0hoP+VmmDGMN5t9UJ0Z" crossorigin="anonymous">
+        <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@400;700&display=swap" rel="stylesheet">
         <link rel="stylesheet" href="styles.css">
       </head>
   <body>
@@ -36,9 +37,9 @@
     <div class="contact-page">
         <h1>Contact Us</h1>
         <div class="contact-info">
-          <p>Address: 123 Main St, Anytown USA</p>
-          <p>Phone: 555-555-5555</p>
-          <p>Email: info@restaurant.com</p>
+          <p>Address: 1 Island St, Keri Keri, Bay of Island, New Zealand</p>
+          <p>Phone: 09-401-4019</p>
+          <p>Email: haukairestaurant@gmail.com</p>
         </div>
         <div class="map-container">
             <iframe src="AIzaSyBkclhIGpzlpxefPyJY2_d1cJz_yZwDcO4" title="Google Maps"></iframe>
