Adding menu items to source code and text file

--- a/menu.html
+++ b/menu.html
@@ -7,7 +7,7 @@
         <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css" integrity="sha384-JcKb8q3iqJ61gNV9KGb8thSsNjpSL0n8PARn9HuZOnIxN0hoP+VmmDGMN5t9UJ0Z" crossorigin="anonymous">
         <link rel="stylesheet" href="styles.css">
       </head>
-  <body>
+<body>
     <nav class="navbar navbar-expand-lg navbar-light bg-light">
       <a class="navbar-brand" href="#">Haukai</a>
       <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
@@ -64,28 +64,97 @@
       <h2>Mains</h2>
       <ul>
         <li>
-          <h3>Spaghetti Bolognese</h3>
-          <p>Spaghetti pasta with a meat-based tomato sauce</p>
+          <h3>Fish Of The Day - $25</h3>
+          <p>Beer-battered fish and kumara fries, served with a side salad and homemade tartare.</p>
         </li>
         <li>
-          <h3>Grilled Salmon</h3>
-          <p>Salmon fillet grilled with lemon and herbs</p>
+          <h3>Mussels And Scallops - $25</h3>
+          <p>Steamed mussel and scallop mousse, honey and soy broth.</p>
         </li>
+        <li>
+            <h3>Seafood Chowder - $30</h3>
+            <p>Creamy chowder filled with tarakihi, prawn, hoki, scallops and mussels, served with flatbread.</p>
+          </li>
+           <li>
+            <h3>Pork Belly - $30</h3>
+            <p>Slow-cooked pork belly served on a bed of apple slaw with roasted kumara and crispy noodles.</p>
+          </li>
+          <li>
+            <h3>Lamb Steak - $33</h3>
+            <p>New Zealand lamb coated in a kawakawa crumb, served with Dijon-mustard-glazed carrots, roasted butternut
+                squash and mushroom jus.</p>
+          </li>
+          <li>
+            <h3>Venison - $33</h3>
+            <p>Venison crusted with Horopito, served with glazed plums, cabbage salad and red wine jus.</p>
+          </li>
       </ul>
     </div>
     <div class="menu-section">
       <h2>Desserts</h2>
       <ul>
         <li>
-          <h3>Tiramisu</h3>
-          <p>An Italian dessert made with ladyfingers, mascarpone cheese, and espresso</p>
+          <h3>Kapiti Ice Cream - $10</h3>
+          <p>Check for daily specials.</p>
         </li>
         <li>
-          <h3>Chocolate Cake</h3>
-          <p>A classic chocolate cake with chocolate frosting</p>
+          <h3>Steamed Pudding - $12</h3>
+          <p>Golden-syrup-flavoured steamed pudding, served with vanilla ice cream.</p>
         </li>
-      </ul>
+        <li>
+            <h3>Mini Pavlova - $16</h3>
+            <p>Mini pavlova, served with kawakawa and lemon-infused cream and fresh fruit.</p>
+          </li>
+          <li>
+            <h3>Banoffee Pie - $16</h3>
+            <p>Toffee, fresh bananas and fresh cream.</p>
+        </li>
+    </ul>
+    <div class="menu-section">
+            <h2>Beverages</h2>
+            <ul>
+                <li>
+                    <h3>Red Wine - B/G</h3>
+                    <p>Terrace Edge Pinot Noir, 2012, Wairarapa - 53/13</p>
+                    <p>Altitude Pinot Noir, 2010, Marlborough - 64/15</p>
+                    <p>Greystone Pinot Noir, 2012, Wairarapa - 73/17</p>
+                    <p>Terrace Edge, Syrah, 2012, Wairarapa - 53/13</p>
+                    <p>Altitude Syrah, 2010, Marlborough  - 64/15</p>
+                    <p>Greystone Syrah, 2012, Wairarapa  - 73/17</p>
+                    <p>Pegasus Bay Merlot, 2013, Waipara - 65/14</p>
+                    <p>Pegasus Bay Pinot Noir, 2013, Waipara - 110</p>
+                </li>
+                <li>
+                    <h3>White Whine - B/G</h3>
+                    <p>Spade Oak Pinot Gris, 2011, Gisborne - 40/10</p>
+                    <p>Maude Pinot Gris, 2017, Otago - 49.5/11</p>
+                    <p>Charles Wiffen Chardonnay, 2013, Otago- 48/11</p>
+                    <p>Amisfield, Riesling, 2016, Otago - 53/12</p>
+                    <p>Lamont Riesling, 2010, Otago - 57/13</p>
+                    <p>Elephant Hill Viognier, 2013, Hawke’s Bay - 55/12</p>
+                    <p>Folium Sauvignon Blanc, 2011, Marlborough - 52/11</p>
+                    <p>Billecart-Salmon Brut Reserve, France - 120</p>
+                </li>
+                <li>
+                    <h3>Beer And Cider</h3>
+                    <p>Garage project range - 11</p>
+                    <p>Tuatara range - 11</p>
+                    <p>Panhead range - 10</p>
+                    <p>Coopers Ale - 10</p>
+                    <p>Heineken - 11</p>
+                    <p>Moa Cider - 10</p>
+                    <p>Crooked Cider - 10</p>
+                </li>
+                <li>
+                    <h3>Non-Alcoholic</h3>
+                    <p>Mineral water - 4</p>
+                    <p>Soft drink - 4</p>
+                    <p>Juice - 4</p>
+                    <p>Coffee - 4.5</p>
+                    <p>Tea - 3.5</p>
+                </li>
+            </ul>
     </div>
   </div>
 </body>
-</html>
+</html>Terrace Edge Pinot Noir, 2012, Wairarapa
