--- a/menu.html
+++ b/menu.html
@@ -7,8 +7,8 @@
         <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css" integrity="sha384-JcKb8q3iqJ61gNV9KGb8thSsNjpSL0n8PARn9HuZOnIxN0hoP+VmmDGMN5t9UJ0Z" crossorigin="anonymous">
         <link rel="stylesheet" href="styles.css">
       </head>
-<body>
-    <nav class="navbar navbar-expand-lg navbar-light bg-light">
+      <body>
+      <nav class="navbar navbar-expand-lg navbar-light bg-light">
       <a class="navbar-brand" href="#">Haukai</a>
       <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
         <span class="navbar-toggler-icon"></span>
@@ -156,5 +156,6 @@
             </ul>
     </div>
   </div>
+</div>
 </body>
-</html>Terrace Edge Pinot Noir, 2012, Wairarapa
+</html>
