--- a/contact.html
+++ b/contact.html
@@ -6,7 +6,7 @@
         <title>Haukai Restaurant</title>
         <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css" integrity="sha384-JcKb8q3iqJ61gNV9KGb8thSsNjpSL0n8PARn9HuZOnIxN0hoP+VmmDGMN5t9UJ0Z" crossorigin="anonymous">
         <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@400;700&display=swap" rel="stylesheet">
-        <link rel="stylesheet" href="styles.css">
+        <link rel="stylesheet" href="style.css">
       </head>
   <body>
     <nav class="navbar navbar-expand-lg navbar-light bg-light">
@@ -34,16 +34,28 @@
         </ul>
       </div>
     </nav>
-    <div class="contact-page">
-        <h1>Contact Us</h1>
-        <div class="contact-info">
-          <p>Address: 1 Island St, Keri Keri, Bay of Island, New Zealand</p>
-          <p>Phone: 09-401-4019</p>
-          <p>Email: haukairestaurant@gmail.com</p>
-        </div>
-        <div class="map-container">
-            <iframe src="AIzaSyBkclhIGpzlpxefPyJY2_d1cJz_yZwDcO4" title="Google Maps"></iframe>
+      <div class="container">
+        <div class="row">
+          <div class="col-md-6">
+            <div class="contact-page">
+              <h1>Contact Us</h1>
+              <div class="contact-info">
+                <p>Address: 1 Island St, Keri Keri, Bay of Island, New Zealand</p>
+                <p>Phone: 09-401-4019</p>
+                <p>Email: haukairestaurant@gmail.com</p>
+              </div>
+            </div>
+          </div>
+          <div class="col-md-6">
+            <div class="map-container">
+              <iframe src="AIzaSyBkclhIGpzlpxefPyJY2_d1cJz_yZwDcO4" title="Google Maps"></iframe>
+          </div>
+          </div>
         </div>
       </div>
-  </body>
+      <div class="footer">
+        <!-- footer content here -->
+      </div>
+      <script src="https://maps.googleapis.com/maps/api/js?key=AIzaSyBkclhIGpzlpxefPyJY2_d1cJz_yZwDcO4"></script>
+    </body>
 </html>
