--- a/Reservations.html
+++ b/Reservations.html
@@ -9,28 +9,13 @@
     <link rel="stylesheet" href="style.css">
   </head>
   <body>
-    <header id="header">
-      <div id="topbar" class="d-flex align-items-center fixed-top">
-        <div class="container d-flex justify-content-center fixed-top">
-          <div class="contact-info d-flex align-items-center">
-            <i class="bi bi-phone d-flex align-items-center">
-              ::before
-              <span>+04 401 4019</span>
-            </i>
-            <i class="bi bi-clock d-flex align-items-center">
-              ::before
-              <span>Wed-Sun: 4pm - 9pm</span>
-            </i>
-          </div>
-        </div>
-      </div>
     <nav class="navbar navbar-expand-lg navbar-light bg-light">
       <a class="navbar-brand" href="#">Haukai</a>
       <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
         <span class="navbar-toggler-icon"></span>
       </button>
       <div class="collapse navbar-collapse" id="navbarNav">
-        <ul class="navbar-nav">
+        <ul class="navbar-nav ml-auto">
           <li class="nav-item">
             <a class="nav-link" href="index.html">Home</a>
           </li>
@@ -49,7 +34,6 @@
         </ul>
       </div>
     </nav>
-  </header>
     <div class="container">
       <div class="row">
         <div class="col-12">
