--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
         <span class="navbar-toggler-icon"></span>
       </button>
       <div class="collapse navbar-collapse" id="navbarNav">
-        <ul class="navbar-nav">
+        <ul class="navbar-nav ml-auto">
           <li class="nav-item">
             <a class="nav-link" href="index.html">Home</a>
           </li>
@@ -43,6 +43,18 @@
       <div class="carousel-inner">
         <div class="carousel-item active">
           <img src="C:\Users\Laptop\OneDrive\Desktop\BIT 607 Web Development AS 2\slide\slide-1.jpg" alt="Restaurant Image-1">
+          <div class="container position-relative text-center text-lg-start aos-init aos-animate" data-aos="zoom-in" data-aos-delay="100">
+            <div class="row">
+              <div class="col-lg-8">
+                <div class="carousel-caption">
+                  <h1>Welcome to Haukai Restaurant</h1>
+                  <p>Experience the best of New Zealand's seafood and produce.</p>
+                  <button class="transparent-btn" id="menu-btn" type="button">Our Menu</button>
+                  <button class="transparent-btn" id="reservations-btn" type="button">Reservations</button>
+                </div>
+              </div>
+              <div class="col-lg-4 d-flex align-items-center justify-content-center position-relative aos-init aos-animate" data-aos="zoom-in" data-aos-delay="200">
+              </div></div></div>
         </div>
         <div class="carousel-item">
           <img src="C:\Users\Laptop\OneDrive\Desktop\BIT 607 Web Development AS 2\slide\slide-2.jpg" alt="Restaurant Image-2">
