new file additions and updated source code mods

--- a/contact.html
+++ b/contact.html
@@ -39,7 +39,7 @@
           <div class="col-md-6">
             <div class="contact-page">
               <h1>Contact Us</h1>
-              <div class="contact-info">
+              <div class="contact-info" id="text">
                 <p>Address: 1 Island St, Keri Keri, Bay of Island, New Zealand</p>
                 <p>Phone: 09-401-4019</p>
                 <p>Email: haukairestaurant@gmail.com</p>
@@ -47,7 +47,7 @@
             </div>
           </div>
           <div class="col-md-6">
-            <div class="map-container">
+            <div class="map-container" id="map">
               <iframe src="AIzaSyBkclhIGpzlpxefPyJY2_d1cJz_yZwDcO4" title="Google Maps"></iframe>
           </div>
           </div>
