--- a/index.html
+++ b/index.html
@@ -5,18 +5,25 @@
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <title>Haukai Restaurant</title>
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css" integrity="sha384-JcKb8q3iqJ61gNV9KGb8thSsNjpSL0n8PARn9HuZOnIxN0hoP+VmmDGMN5t9UJ0Z" crossorigin="anonymous">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Poppins&display=swap" rel="stylesheet">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Satisfy&display=swap" rel="stylesheet">
     <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@400;700&display=swap" rel="stylesheet">
-    <link rel="stylesheet" href="style.css">
+  	<link rel="stylesheet" href="style.css">
   </head>
   <body>
-    <nav class="navbar navbar-expand-lg navbar-light bg-light">
+    <header class="header bg-transparent">
+    <nav class="navbar navbar-expand-lg navbar-light bg-transparent">
       <a class="navbar-brand" href="#">Haukai</a>
       <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
         <span class="navbar-toggler-icon"></span>
       </button>
       <div class="collapse navbar-collapse" id="navbarNav">
         <ul class="navbar-nav ml-auto">
-          <li class="nav-item">
+          <li class="nav-item" >
             <a class="nav-link" href="index.html">Home</a>
           </li>
           <li class="nav-item">
@@ -34,7 +41,8 @@
         </ul>
       </div>
     </nav>
-    <div class="carousel slide" data-ride="carousel" id="bg-carousel">
+    </header>
+     <div class="carousel slide" data-ride="carousel" id="bg-carousel">
       <ol class="carousel-indicators">
         <li data-target="#bg-carousel" data-slide-to="0" class="active"></li>
         <li data-target="#bg-carousel" data-slide-to="1"></li>
@@ -45,15 +53,17 @@
           <img src="C:\Users\Laptop\OneDrive\Desktop\BIT 607 Web Development AS 2\slide\slide-1.jpg" alt="Restaurant Image-1">
           <div class="container position-relative text-center text-lg-start aos-init aos-animate" data-aos="zoom-in" data-aos-delay="100">
             <div class="row">
-              <div class="col-lg-8">
+              <div class="col-md-6">
                 <div class="carousel-caption">
-                  <h1>Welcome to Haukai Restaurant</h1>
-                  <p>Experience the best of New Zealand's seafood and produce.</p>
-                  <button class="transparent-btn" id="menu-btn" type="button">Our Menu</button>
-                  <button class="transparent-btn" id="reservations-btn" type="button">Reservations</button>
+                  <h1 class="caption-heading">Welcome to Haukai Restaurant</h1>
+                  <p class="caption-paragraph">Experience the best of New Zealand's seafood and produce.</p>
+                  <div class="caption-buttons-conatiner">
+                  <button class="transparent-btn btn-rounded caption-button" id="menu-btn" type="button">Our Menu</button>
+                  <button class="transparent-btn btn-rounded caption-button" id="reservations-btn" type="button">Reservations</button>
+                  </div>
                 </div>
               </div>
-              <div class="col-lg-4 d-flex align-items-center justify-content-center position-relative aos-init aos-animate" data-aos="zoom-in" data-aos-delay="200">
+              <div class="col-md-6 d-flex align-items-center justify-content-center position-relative aos-init aos-animate" data-aos="zoom-in" data-aos-delay="200">
               </div></div></div>
         </div>
         <div class="carousel-item">
@@ -69,5 +79,6 @@
     <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/js/bootstrap.min.js" integrity="sha384-B4gt1jrGC7Jh4AgTPSdUtOBvfO8shuf57BaghqFfPlYxofvL8/KUEfYiJOMMV+rV" crossorigin="anonymous"></script>
     <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.3/umd/popper.min.js" integrity="sha384-ZMP7rVo3mIykV+2+9J3UJ46jBk0WLaUAdn689aCwoqbBJiSnjAK/l8WvCWPIPm49" crossorigin="anonymous"></script>
-      </body>
+    <script async defer src="https://maps.googleapis.com/maps/api/js?key=AIzaSyBYzQ3maGRAvuDdHWQamoOBwhqrqBDaZos&callback=initMap" onerror="handleError()"></script>
+  </body>
     </html>
