--- a/menu.html
+++ b/menu.html
@@ -5,11 +5,13 @@
         <meta name="viewport" content="width=device-width, initial-scale=1">
         <title>Haukai Restaurant</title>
         <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css" integrity="sha384-JcKb8q3iqJ61gNV9KGb8thSsNjpSL0n8PARn9HuZOnIxN0hoP+VmmDGMN5t9UJ0Z" crossorigin="anonymous">
+        <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@400;700&display=swap" rel="stylesheet">
         <link rel="stylesheet" href="style.css">
       </head>
       <body>
-      <nav class="navbar navbar-expand-lg navbar-light bg-light">
-      <a class="navbar-brand" href="#">Haukai</a>
+        <div class="header bg-transparent">
+          <nav class="navbar navbar-expand-lg navbar-light bg-transparent">
+            <a class="navbar-brand" href="#">Haukai</a>
       <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
         <span class="navbar-toggler-icon"></span>
       </button>
@@ -33,9 +35,14 @@
         </ul>
       </div>
     </nav>
-<div class="menu-page">
+<div class="menu-page text-center">
+  <div class="row">
+    <div class="leftcolumn">
+  <div class="card">
     <h1>Our Menu</h1>
     <div class="menu-section">
+      <div class="gridcontainer">
+      <div class=" grid-item grid-item-1">
       <h2>Appitizers</h2>
       <ul>
         <li>
@@ -61,6 +68,7 @@
       </ul>
     </div>
     <div class="menu-section">
+        <div class=" grid-item grid-item-2">
       <h2>Mains</h2>
       <ul>
         <li>
@@ -91,6 +99,7 @@
       </ul>
     </div>
     <div class="menu-section">
+      <div class=" grid-item grid-item-3">
       <h2>Desserts</h2>
       <ul>
         <li>
@@ -109,8 +118,11 @@
             <h3>Banoffee Pie - $16</h3>
             <p>Toffee, fresh bananas and fresh cream.</p>
         </li>
-    </ul>
-    <div class="menu-section">
+      </ul>
+  </div>
+      <div class="menu-section">
+        <div class="rightcolumn">
+          <div class="grid-item grid-item-2">
             <h2>Beverages</h2>
             <ul>
                 <li>
@@ -156,6 +168,15 @@
             </ul>
     </div>
   </div>
+</div>
+</div>
+</div>
+</div>
+</div>
+</div>
+</div>
+</div>
+</div>
 </div>
 </body>
 </html>
