--- a/contact.html
+++ b/contact.html
@@ -1,22 +1,29 @@
 <!DOCTYPE html>
 <html lang="en">
-    <head>
-        <meta charset="UTF-8">
-        <meta name="viewport" content="width=device-width, initial-scale=1">
-        <title>Haukai Restaurant</title>
-        <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css" integrity="sha384-JcKb8q3iqJ61gNV9KGb8thSsNjpSL0n8PARn9HuZOnIxN0hoP+VmmDGMN5t9UJ0Z" crossorigin="anonymous">
-        <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@400;700&display=swap" rel="stylesheet">
-        <link rel="stylesheet" href="style.css">
-      </head>
-  <body>
-    <nav class="navbar navbar-expand-lg navbar-light bg-light">
+  <head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1">
+    <title>Haukai Restaurant</title>
+    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css" integrity="sha384-JcKb8q3iqJ61gNV9KGb8thSsNjpSL0n8PARn9HuZOnIxN0hoP+VmmDGMN5t9UJ0Z" crossorigin="anonymous">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Poppins&display=swap" rel="stylesheet">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Satisfy&display=swap" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@400;700&display=swap" rel="stylesheet">
+  	<link rel="stylesheet" href="style.css">
+  </head>
+  <body class="page-5">
+    <header class="header bg-transparent">
+    <nav class="navbar navbar-expand-lg navbar-light bg-transparent">
       <a class="navbar-brand" href="#">Haukai</a>
       <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
         <span class="navbar-toggler-icon"></span>
       </button>
       <div class="collapse navbar-collapse" id="navbarNav">
         <ul class="navbar-nav ml-auto">
-          <li class="nav-item">
+          <li class="nav-item" >
             <a class="nav-link" href="index.html">Home</a>
           </li>
           <li class="nav-item">
@@ -34,6 +41,7 @@
         </ul>
       </div>
     </nav>
+    </header>
       <div class="container">
         <div class="row">
           <div class="col-md-6">
@@ -48,13 +56,40 @@
           </div>
           <div class="col-md-6">
             <div class="map-container" id="map">
-              <iframe src="AIzaSyBkclhIGpzlpxefPyJY2_d1cJz_yZwDcO4" title="Google Maps"></iframe>
-          </div>
+              <iframe width="400" height="275" title="Haukai Retaurant Location" src="https://www.google.com/maps/embed/v1/place?key=AIzaSyBYzQ3maGRAvuDdHWQamoOBwhqrqBDaZos&q=Space+Needle,Seattle+WA"></iframe>
+              <div id="map-error"></div>
+              </div>
+            </div>
           </div>
         </div>
-      </div>
-      <div class="footer">
-       </div>
+        <footer>
+          <div class="container">
+            <div class="row">
+              <div class="col">
+                <h3>Haukai Restaurant</h3>
+                <p>1 Island Street</p>
+                <p>Keri Keri, Bay of Islands, New Zealand</p>
+              </div>
+              <div class="col">
+                <h3>Contact Us</h3>
+                <ul>
+                  <li><a href="mailto:haukairestaurant@gmail.com">haukairestaurant@gmail.com</a></li>
+                  <li>+64 09 401 4019</li>
+                </ul>
+              </div>
+              <div class="col">
+                <h3>Links</h3>
+                <ul>
+                  <li><a href="#">Privacy Policy</a></li>
+                  <li><a href="#">Terms of Use</a></li>
+                </ul>
+              </div>
+            </div>
+            <div class="copyright">
+              <p>Copyright © 2022 Haukai Restaurant</p>
+            </div>
+          </div>
+        </footer>
       <script src="https://maps.googleapis.com/maps/api/js?key=AIzaSyBkclhIGpzlpxefPyJY2_d1cJz_yZwDcO4"></script>
     </body>
 </html>
