--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
     <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@400;700&display=swap" rel="stylesheet">
   	<link rel="stylesheet" href="style.css">
   </head>
-  <body>
+  <body class="page-1">
     <header class="header bg-transparent">
     <nav class="navbar navbar-expand-lg navbar-light bg-transparent">
       <a class="navbar-brand" href="#">Haukai</a>
@@ -74,6 +74,35 @@
         </div>
       </div>
     </div>
+    <footer>
+      <div class="container">
+        <div class="row">
+          <div class="col">
+            <h3>Haukai Restaurant</h3>
+            <p>1 Island Street</p>
+            <p>Keri Keri, Bay of Islands, New Zealand</p>
+            <p>09 401 4019</p>
+          </div>
+          <div class="col">
+            <h3>Contact Us</h3>
+            <ul>
+              <li><a href="mailto:haukairestaurant@gmail.com">haukairestaurant@gmail.com</a></li>
+              <li>+64 09 401 4019</li>
+            </ul>
+          </div>
+          <div class="col">
+            <h3>Links</h3>
+            <ul>
+              <li><a href="#">Privacy Policy</a></li>
+              <li><a href="#">Terms and Conditions</a></li>
+            </ul>
+            <div class="copyright">
+          <p>Copyright © 2022 Haukai Restaurant</p>
+        </div>
+          </div>
+       </div>
+      </div>
+    </footer>
     <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js" integrity="sha384-DfXdz2htPH0lsSSs5nCTpuj/zy4C+OGpamoFVy38MVBnE+IbbVYUew+OrCXaRkfj" crossorigin="anonymous"></script>
     <script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.1/dist/umd/popper.min.js" integrity="sha384-9/reFTGAW83EW2RDu2S0VKaIzap3H66lZH81PoYlFhbGU+6BZp6G7niu735Sk7lN" crossorigin="anonymous"></script>
     <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/js/bootstrap.min.js" integrity="sha384-B4gt1jrGC7Jh4AgTPSdUtOBvfO8shuf57BaghqFfPlYxofvL8/KUEfYiJOMMV+rV" crossorigin="anonymous"></script>
