New img file additions and source code mods

--- a/Reservations.html
+++ b/Reservations.html
@@ -14,7 +14,7 @@
     <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@400;700&display=swap" rel="stylesheet">
   	<link rel="stylesheet" href="style.css">
   </head>
-  <body class="page-3">
+  <body>
     <header class="header bg-transparent">
     <nav class="navbar navbar-expand-lg navbar-light bg-transparent">
       <a class="navbar-brand" href="#">Haukai</a>
