--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <title>Haukai Restaurant</title>
+    <link rel="stylesheet" href="style.css">
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css" integrity="sha384-JcKb8q3iqJ61gNV9KGb8thSsNjpSL0n8PARn9HuZOnIxN0hoP+VmmDGMN5t9UJ0Z" crossorigin="anonymous">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
@@ -12,9 +13,9 @@
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Satisfy&display=swap" rel="stylesheet">
     <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@400;700&display=swap" rel="stylesheet">
-  	<link rel="stylesheet" href="style.css">
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-rbsA2VBKQhggwzxH7pPCaAqO46MgnOM80zW1RWuH61DGLwZJEdK2Kadq2F9CUG65" crossorigin="anonymous">
   </head>
-  <body class="page-1">
+  <body>
     <header class="header bg-transparent">
     <nav class="navbar navbar-expand-lg navbar-light bg-transparent">
       <a class="navbar-brand" href="#">Haukai</a>
@@ -57,57 +58,51 @@
                 <div class="carousel-caption">
                   <h1 class="caption-heading">Welcome to Haukai Restaurant</h1>
                   <p class="caption-paragraph">Experience the best of New Zealand's seafood and produce.</p>
-                  <div class="caption-buttons-conatiner">
-                  <button class="transparent-btn btn-rounded caption-button" id="menu-btn" type="button">Our Menu</button>
-                  <button class="transparent-btn btn-rounded caption-button" id="reservations-btn" type="button">Reservations</button>
-                  </div>
+                  <button class="transparent-btn btn-rounded" id="menu-btn" type="button" href="menu.html">Our Menu</button>
+                  <button class="transparent-btn btn-rounded" id="reservations-btn-3" type="button" href="reservations.html">Reservations</button>
                 </div>
               </div>
-              <div class="col-md-6 d-flex align-items-center justify-content-center position-relative aos-init aos-animate" data-aos="zoom-in" data-aos-delay="200">
-              </div></div></div>
+            </div>
+          </div>
         </div>
         <div class="carousel-item">
           <img src="C:\Users\Laptop\OneDrive\Desktop\BIT 607 Web Development AS 2\slide\slide-2.jpg" alt="Restaurant Image-2">
+          <div class="container position-relative text-center text-lg-start aos-init aos-animate" data-aos="zoom-in" data-aos-delay="100">
+            <div class="row">
+              <div class="col-md-6">
+                <div class="carousel-caption">
+                  <h1 class="caption-heading">Welcome to Haukai Restaurant</h1>
+                  <p class="caption-paragraph">Experience the best of New Zealand's seafood and produce.</p>
+                  <button class="transparent-btn btn-rounded" id="menu-btn-1" type="button" href="menu.html">Our Menu</button>
+                  <button class="transparent-btn btn-rounded" id="reservations-btn-2" type="button" href="reservations.html">Reservations</button>
+                </div>
+              </div>
+            </div>
+          </div>
         </div>
         <div class="carousel-item">
           <img src="C:\Users\Laptop\OneDrive\Desktop\BIT 607 Web Development AS 2\slide\slide-3.jpg" alt="Restaurant Image-3">
+          <div class="container position-relative text-center text-lg-start aos-init aos-animate" data-aos="zoom-in" data-aos-delay="100">
+            <div class="row">
+              <div class="col-md-6">
+                <div class="carousel-caption">
+                  <h1 class="caption-heading">Welcome to Haukai Restaurant</h1>
+                  <p class="caption-paragraph">Experience the best of New Zealand's seafood and produce.</p>
+                  <button class="transparent-btn btn-rounded" id="menu-btn-3" type="button" href="menu.html">Our Menu</button>
+                  <button class="transparent-btn btn-rounded" id="reservations-btn-4" type="button" href="reservations.html">Reservations</button>
+                </div>
+              </div>
+            </div>
+          </div>
         </div>
       </div>
     </div>
-    <footer>
-      <div class="container">
-        <div class="row">
-          <div class="col">
-            <h3>Haukai Restaurant</h3>
-            <p>1 Island Street</p>
-            <p>Keri Keri, Bay of Islands, New Zealand</p>
-            <p>09 401 4019</p>
-          </div>
-          <div class="col">
-            <h3>Contact Us</h3>
-            <ul>
-              <li><a href="mailto:haukairestaurant@gmail.com">haukairestaurant@gmail.com</a></li>
-              <li>+64 09 401 4019</li>
-            </ul>
-          </div>
-          <div class="col">
-            <h3>Links</h3>
-            <ul>
-              <li><a href="#">Privacy Policy</a></li>
-              <li><a href="#">Terms and Conditions</a></li>
-            </ul>
-            <div class="copyright">
-          <p>Copyright © 2022 Haukai Restaurant</p>
-        </div>
-          </div>
-       </div>
-      </div>
-    </footer>
+    <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.11.6/dist/umd/popper.min.js" integrity="sha384-oBqDVmMz9ATKxIep9tiCxS/Z9fNfEXiDAYTujMAeBAsjFuCZSmKbSSUnQlmh/jp3" crossorigin="anonymous"></script>
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/js/bootstrap.min.js" integrity="sha384-cuYeSxntonz0PPNlHhBs68uyIAVpIIOZZ5JqeqvYYIcEL727kskC66kF92t6Xl2V" crossorigin="anonymous"></script>
     <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js" integrity="sha384-DfXdz2htPH0lsSSs5nCTpuj/zy4C+OGpamoFVy38MVBnE+IbbVYUew+OrCXaRkfj" crossorigin="anonymous"></script>
     <script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.1/dist/umd/popper.min.js" integrity="sha384-9/reFTGAW83EW2RDu2S0VKaIzap3H66lZH81PoYlFhbGU+6BZp6G7niu735Sk7lN" crossorigin="anonymous"></script>
     <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/js/bootstrap.min.js" integrity="sha384-B4gt1jrGC7Jh4AgTPSdUtOBvfO8shuf57BaghqFfPlYxofvL8/KUEfYiJOMMV+rV" crossorigin="anonymous"></script>
     <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.3/umd/popper.min.js" integrity="sha384-ZMP7rVo3mIykV+2+9J3UJ46jBk0WLaUAdn689aCwoqbBJiSnjAK/l8WvCWPIPm49" crossorigin="anonymous"></script>
-    <script async defer src="https://maps.googleapis.com/maps/api/js?key=AIzaSyBYzQ3maGRAvuDdHWQamoOBwhqrqBDaZos&callback=initMap" onerror="handleError()"></script>
-  </body>
+      </body>
     </html>
