Source code amendments

--- a/contact.html
+++ b/contact.html
@@ -74,7 +74,7 @@
                 <h3>Contact Us</h3>
                 <ul>
                   <li><a href="mailto:haukairestaurant@gmail.com">haukairestaurant@gmail.com</a></li>
-                  <li>+64 09 401 4019</li>
+                  <li>Phone: +64 09 401 4019</li>
                 </ul>
               </div>
               <div class="col">
