--- a/index.html
+++ b/index.html
@@ -39,6 +39,9 @@
           <li class="nav-item">
             <a class="nav-link" href="contact.html">Contact</a>
           </li>
+          <li class="nav-item">
+            <button class="transparent-btn btn-rounded" id="reservations-btn" type="button" href="reservations.html">Reservations</button>
+          </li>
         </ul>
       </div>
     </nav>
@@ -59,7 +62,7 @@
                   <h1 class="caption-heading">Welcome to Haukai Restaurant</h1>
                   <p class="caption-paragraph">Experience the best of New Zealand's seafood and produce.</p>
                   <button class="transparent-btn btn-rounded" id="menu-btn" type="button" href="menu.html">Our Menu</button>
-                  <button class="transparent-btn btn-rounded" id="reservations-btn-3" type="button" href="reservations.html">Reservations</button>
+                  <button class="transparent-btn btn-rounded" id="reservations-btn-1" type="button" href="reservations.html">Reservations</button>
                 </div>
               </div>
             </div>
@@ -88,8 +91,8 @@
                 <div class="carousel-caption">
                   <h1 class="caption-heading">Welcome to Haukai Restaurant</h1>
                   <p class="caption-paragraph">Experience the best of New Zealand's seafood and produce.</p>
-                  <button class="transparent-btn btn-rounded" id="menu-btn-3" type="button" href="menu.html">Our Menu</button>
-                  <button class="transparent-btn btn-rounded" id="reservations-btn-4" type="button" href="reservations.html">Reservations</button>
+                  <button class="transparent-btn btn-rounded" id="menu-btn-2" type="button" href="menu.html">Our Menu</button>
+                  <button class="transparent-btn btn-rounded" id="reservations-btn-3" type="button" href="reservations.html">Reservations</button>
                 </div>
               </div>
             </div>
