--- a/hours.html
+++ b/hours.html
@@ -52,7 +52,7 @@
           <li>Saturday: 4:00 PM - 10:00 PM</li>
           <li>Sunday: 4:00 PM - 9:00 PM</li>
         </ul>
-        <p>*Note: Hours may vary on holidays</p>
+        <p class="p1">*Note: Hours may vary on holidays</p>
       </div>
       <footer>
         <div class="container">
